--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 kilua = "0.0.18"
 kilua-published = "0.0.18"
-kotlin = "2.1.10-RC2"
+kotlin = "2.1.10"
 compose = "1.8.0-alpha02"
 dokka = "2.0.0"
 nmcp = "0.0.8"
-ksp = "2.1.10-RC2-1.0.29"
+ksp = "2.1.10-1.0.29"
 detekt = "1.23.7"
 npm-publish = "3.4.2"
-gradle-plugin-publish = "1.3.0"
-kilua-rpc = "0.0.25"
+gradle-plugin-publish = "1.3.1"
+kilua-rpc = "0.0.26"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.27.0"
 kotlinx-coroutines = "1.10.1"
@@ -19,15 +19,15 @@ javalin = "6.4.0"
 jooby = "3.6.0"
 ktor = "3.0.3"
 koin = "4.1.0-Beta5"
-koin-annotations = "2.0.0-Beta3"
+koin-annotations = "2.0.0-RC1"
 micronaut = "4.7.4"
 micronaut-plugins = "4.4.5"
-spring-boot = "3.4.1"
+spring-boot = "3.4.2"
 spring-dependency-management = "1.1.7"
-vertx = "5.0.0.CR3"
+vertx = "5.0.0.CR4"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
-shadow = "9.0.0-beta5"
+shadow = "9.0.0-beta6"
 logback = "1.5.16"
 tomlj = "1.1.1"
 kaml = "0.67.0"
@@ -46,7 +46,7 @@ fontawesome = "6.7.2"
 trix = "2.1.12"
 toastify = "1.12.0"
 tempus-dominus = "6.9.11"
-tom-select = "2.4.1"
+tom-select = "2.4.2"
 imask = "7.6.1"
 tabulator = "6.3.1"
 rsup-progress = "3.2.0"
@@ -55,7 +55,7 @@ marked = "15.0.6"
 sanitize-html = "2.14.0"
 postcss = "8.5.1"
 postcss-loader = "8.1.1"
-tailwindcss = "4.0.0"
+tailwindcss = "4.0.1"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.2"
 
