--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -58,6 +58,7 @@ postcss-loader = "8.1.1"
 tailwindcss = "4.0.1"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.2"
+motion = "12.0.6"
 
 [libraries]
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "kotlinx-atomicfu" }
